snapshot-tests/tests/snapshots/parser__bad_keys__pipe.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected an equals, found a character at key
  ┌─ pipe:1:4
  │
1 │ key|=3
  │    ^ expected an equals
